--- a/templates/index.html
+++ b/templates/index.html
@@ -356,7 +356,7 @@
             }
         });
 
-        function start_buzzer_polling(stopConditionCallback) {
+        function buzzer_polling(stopConditionCallback) {
             if (!isBuzzerPolling) {
                 isBuzzerPolling = true;
                 buzzerPollInterval = setInterval(function() {
@@ -372,37 +372,35 @@
                             // Optionally handle error cases
                         }
                     });
-                }, 200); // Poll every 200 milliseconds (5 times per second)
+                }, 200);
             }
         }
 
-        function stop_buzzer_polling() {
-            if (isBuzzerPolling) {
-                clearInterval(buzzerPollInterval);
-                isBuzzerPolling = false;
-            }
+        function start_buzzer_polling() {
+            buzzer_polling(function(response) {
+                var buzzer_id = response.buzzer_id;
+                var team_id = response.team_id;
+                var team_name = response.team_name;
+                $('#questionModalAnsweringTeam').text("");
+
+                if (buzzer_id !== null && team_id !== null) {
+                    $('#questionModalAnsweringTeam').text(team_name + "(Buzzer" + buzzer_id + ")");
+                    if (isBuzzerPolling) {
+                        clearInterval(buzzerPollInterval);
+                        isBuzzerPolling = false;
+                    }
+                    var audio = new Audio('static/fart.mp3');
+                    audio.play();
+                }
+            })
         }
 
         function selectQuestion(questionId) {
             currentQuestionId = questionId;
-
-            // Check if the question card is already answered
             var card = $(`[data-question-id="${questionId}"]`);
             var alreadyAnswered = card.hasClass('answered');
 
-            start_buzzer_polling(function(response) {
-                var buzzer_id = response.buzzer_id;
-                var team_id = response.team_id;
-                var team_name = response.team_name;
-
-                $('#questionModalAnsweringTeam').text("Selected Team:");
-
-                if (buzzer_id !== null && team_id !== null) {
-                    console.log('Buzzer event received:', response);
-                    $('#questionModalAnsweringTeam').text("Selected Team: " + team_name);
-                    stop_buzzer_polling();
-                }
-            })
+            start_buzzer_polling();
 
             $.post("/select_question/" + questionId, {}, function(data) {
                 $('#questionModalLabel').text(data.category + " - " + data.points + " (" + data.type + ")")
@@ -447,18 +445,7 @@
                         $('#questionModal').modal('hide');
                     } else {
                         $('#questionModal').modal('show');
-                        start_buzzer_polling(function(response) {
-                            var buzzer_id = response.buzzer_id;
-                            var team_id = response.team_id;
-                            var team_name = response.team_name;
-                            $('#questionModalAnsweringTeam').text("Selected Team:");
-
-                            if (buzzer_id !== null && team_id !== null) {
-                                console.log('Buzzer event received:', response);
-                                $('#questionModalAnsweringTeam').text("Selected Team: " + team_name);
-                                stop_buzzer_polling();
-                            }
-                        })
+                        start_buzzer_polling();
                     }
                     updateTeamScores(response.teams);
                 } else {
