--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
                     <h5 class="answering-team" id="questionModalAnsweringTeam"></h5>
                 </div>
                 <div class="modal-header-container">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <button type="button" class="close" id="close-modal" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
             </div>
             <div class="modal-body">
@@ -319,6 +319,13 @@
         $('.question-card').on('click', function() {
             const questionID = $(this).attr('data-question-id');
             selectQuestion(questionID);
+        });
+
+        $('#close-modal').on('click', function() {
+            if (isBuzzerPolling) {
+                clearInterval(buzzerPollInterval);
+                isBuzzerPolling = false;
+            }
         });
 
         $('#toggle-team-settings-btn').on('click', function() {
