--- a/templates/index.html
+++ b/templates/index.html
@@ -268,6 +268,11 @@
                 </div>
             </div>
         </div>
+        <div class="my-3">
+            <form action="{{ url_for('new_session') }}" method="post">
+                <button type="submit" class="btn btn-primary">New Session</button>
+            </form>
+        </div>
     </div>
 
     <!-- Question Modal -->
